<resources>
    <string name="app_name">J</string>
    <string name="thank_you">Thank you!</string>
    <string name="todo">TODO</string>
    <string name="joshua_stalin_s">Joshua Stalin S</string>
    <string name="_2147118">2147118</string>
    <string name="toast">Toast</string>
    <string name="joshua">Joshua</string>
    <string name="button">Button</string>
    <string name="title_activity_login">login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="help_us_know_a_little_more_about_you">Help us know a little more about you</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="do_you_shop_often">Do you shop Often ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="type_of_colour_you_prefer">Type of Colour you Prefer.</string>
    <string name="would_you_like_to_get_notified_on_latest_offers">Would you like to get notified on latest Offers!</string>
    <string name="butyes">yes?</string>
    <string name="submit">Submit</string>
    <string name="sometimes">Sometimes</string>
</resources>